--- a/wpfollowers-admin.css
+++ b/wpfollowers-admin.css
@@ -516,3 +516,27 @@ li.tabber.error a {
 	text-decoration: none;	
 	display: block;
 }
+
+.instagram_followers_activate .instagram_followers_button.instagram_followers_review_button {
+	background-image: url('img/star.png');
+	background-position: -20px center;
+	background-repeat: no-repeat;
+	background-size: 60px auto;
+}
+
+.instagram_followers_review .instagram_followers_hide_review {
+	float: right;
+	padding-top: 23px;
+	padding-right: 145px;
+}
+
+.instagram_followers_review .instagram_followers_hide_review a {
+	font-size: 12px;
+	color: #EEE;
+	text-decoration: underline;
+}
+
+.instagram_followers_review .instagram_followers_hide_review a:hover {
+	text-decoration: none;
+	color: #FFF;
+}
