--- a/wpfollowers-admin.css
+++ b/wpfollowers-admin.css
@@ -540,3 +540,17 @@ li.tabber.error a {
 	text-decoration: none;
 	color: #FFF;
 }
+
+.wpfollowers_widget_loader {
+	background: url('img/ajax-loader.gif') no-repeat center center;
+	width: 16px;
+	height: 16px;
+	position: absolute;
+	right: 5px;
+	top: 30px;
+	display: none;
+}
+
+.wploading .wpfollowers_widget_loader {
+	display: block;
+}
